# fnf-accounting

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SETUP_INSTRUCTIONS.md  alembic.ini  bokforingsscenarier.json  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_receipt.txt
.cursor/rules/: rules.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependencies.yml  quality.yml  release.yml  test-matrix.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_bas_accounts.py
docs/: API.md  CI_CD_SETUP.md  KONTOPLAN_VERSIONING.md  NATURAL_LANGUAGE_API.md  POSTMAN_TESTING_GUIDE.md  PROGRESS.md  QUICK_POSTMAN_TEST.md
memory-bank/: architecture.md  conversation-summary.md  current-system-status.md  design.md  fire-and-forget-accounting_nordic-ai-architecture.md.md  limitations-resolution-plan.md  mock-service-refactoring-session.md  quality-standards.md  roadmap.md
memory-bank/accounting/: bas_instructions.md
mobile-client/: .eslintrc.js  .gitignore  App.tsx  README - kopia.md  README.md  TEMPLATE_GUIDE.md  TEMPLATE_SUMMARY.md  app.json  babel.config.js  eas.json  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile-client/assets/: README.md
mobile-client/scripts/: install-compatible.sh  setup-mobile.sh  setup.js  test-api-connection.js  upgrade-to-sdk54.sh
mobile-client/src/components/: Button.tsx  Card.tsx
mobile-client/src/config/: colors.ts  environment.ts  index.ts  spacing.ts  types.ts  typography.ts
mobile-client/src/hooks/: useTheme.ts
mobile-client/src/i18n/: en.json  index.ts  sv.json
mobile-client/src/screens/: BookedScreen.tsx  FireScreen.tsx  HomeScreen.tsx  ReportsScreen.tsx  SettingsScreen.tsx
mobile-client/src/services/: apiService.ts
mobile-client/src/state/: index.ts  uiStore.ts  userStore.ts
mobile-client/src/theme/: provider.tsx  tokens.ts
mobile-client/tests/: jest.setup.ts
postman/: Fire_Forget_AI_Accounting.postman_collection.json  Fire_Forget_AI_Accounting_Environment.postman_environment.json  README.md
postman/test-data/: README.md
scripts/: create_tables.py  debug-pipeline.sh  demo-user-experience.sh  docker-troubleshoot.sh  load_bas_data.py  run_tests.py  setup-database.sh  setup-postman.sh  test-api.sh  test-bas-compliance.sh  test-booking-fix.sh  test-ci-locally.sh  test-content-type-fix.sh  test-final-booking-fix.sh  test-fire-and-forget.sh  test-mvp-pipeline.sh  test-natural-language.sh  test-no-mock-data.sh  test-pipeline-booking-id.sh  toggle-mock-data.sh
src/: __init__.py
src/adapters/: __init__.py  llm.py  ocr.py  storage.py
src/app/: __init__.py  auth.py  booking_service_factory.py  dependencies.py  dto.py  error_handlers.py  exceptions.py  main.py  mock_booking_service.py  real_booking_service.py  simple_services.py  validators.py
src/app/routers/: auth.py  bookings.py  documents.py  natural_language.py  pipelines.py  policies.py
src/domain/: __init__.py  models.py  natural_language_service.py  services.py
src/infra/: __init__.py  config.py  database.py
src/orchestrator/: __init__.py  pipeline.py  simple_pipeline.py
src/repositories/: database.py
src/rules/: __init__.py  bas_dataset.py  engine.py  policy_migration.py  schemas.py
src/rules/bas_datasets/: bas_2025_v1_0.json  bas_2025_v2.0.json
src/rules/policies/: SE_OTHER_BUSINESS_V1.json  se_computer_purchase.json  se_consulting_eu.json  se_employee_expense.json  se_leasing.json  se_mobile_phone_installment.json  se_office_supplies.json  se_representation_meal.json  (+4 more)
tests/: conftest.py  test_integration.py  test_natural_language_service.py  test_policy_engine.py
tests/unit/: test_domain_models.py  test_rule_engine.py
(+2 files in other folders)
